[gd_scene load_steps=2 format=3 uid="uid://bh1uu1p7mdooh"]

[ext_resource type="Script" path="res://scenes/tests/resource_manager_test.gd" id="1_whjeg"]

[node name="ResourceManagerTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_whjeg")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "ResourceManager Test Scene"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
columns = 2

[node name="LoadSyncButton" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "Load Resource (Sync)"

[node name="LoadAsyncButton" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "Load Resource (Async)"

[node name="UnloadButton" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "Unload Resource"

[node name="PreloadButton" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "Preload Resources"

[node name="ClearCacheButton" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "Clear Cache"

[node name="ShowStatsButton" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "Show Cache Stats"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ResultsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Test results will appear here"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
expand_mode = 1
stretch_mode = 5

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="StatsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Cache statistics"
horizontal_alignment = 1
autowrap_mode = 3

[connection signal="pressed" from="VBoxContainer/GridContainer/LoadSyncButton" to="." method="_on_load_sync_button_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/LoadAsyncButton" to="." method="_on_load_async_button_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/UnloadButton" to="." method="_on_unload_button_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/PreloadButton" to="." method="_on_preload_button_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/ClearCacheButton" to="." method="_on_clear_cache_button_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/ShowStatsButton" to="." method="_on_show_stats_button_pressed"]
